@@ -1,12 +1,0 @@
-$Id: README.Amiga,v 1.3 2005/12/20 01:11:45 rockyb Exp $
-
-At present Amiga support in this branch has been dropped. The standard
-issue GNU Make still support Amiga.
-
-It not they we have anything against the Amiga; we don't. But we
-neither have an Amiga nor access to one, so it is not regularly
-tested. Furthermore, there was an inordinant amount of clutter in the
-form of conditional compilation for Amiga support.
-
-Should someone desire to add back in Amiga support, that's okay. But
-it probably would be added back in a more modular way.
